# tuiper

./: .env  .env.example  .gitignore  Cargo.toml  README.md
crates/common/src/: lib.rs
crates/oxide/: Cargo.toml
crates/oxide/src/: app.rs  main.rs  network.rs  typing.rs  ui.rs  words.rs
crates/protocols/: Cargol.toml
crates/protocols/src/: auth.rs  game.rs  leaderboard.rs  lib.rs  races.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tuiper/: Cargo.toml
crates/tuiper/src/: app.rs  auth.rs  main.rs  network.rs  theme.rs  typing.rs  ui.rs  words.rs
crates/tuiper/src/mode/: mod.rs
crates/tuiper/src/theme/: constants.rs  mod.rs  resolve.rs
crates/tuiper/src/ui/: common.rs  config.rs  leaderboard.rs  lobby.rs  login.rs  logo.rs  mod.rs  notification.rs  queue.rs  race.rs  results.rs  shell.rs  statistics.rs
deploy/: tuiper-server.service
deploy/terraform/: main.tf  outputs.tf  variables.tf
languages/: english1000.txt
