[package]
name = "tuiper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tuiper"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
common = { path = "../common" }
protocols = {
    path = "../protocols"
}
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = {
    version = "1.0",
    features = ["derive"]
}
serde_json = "1.0"