[package]
name = "tuiper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tuiper"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
clap = {
    version = "4.5",
    features = ["derive"]
}
common = {
    path = "../common"
}
protocols = {
    path = "../protocols"
}
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = {
    version = "0.12",
    default-features = false,
    features = ["blocking", "json", "rustls-tls"]
}
percent-encoding = "2.3"
serde = {
    version = "1.0",
    features = ["derive"]
}
serde_json = "1.0"
strum = {
        version = "0.28",
        features = ["derive"]
}
dirs = "6.0.0"
dotenvy = "0.15.7"
supports-color = "3.0.2"
